fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -307,7 +307,7 @@ select {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-55%, -55%);
+    transform: translate(-50%, -55%);
 
     border-radius: 5px;
     border: 0;
